# algorithmic-trading-python

./: pyproject.toml
finished_files/: setup.md
