[tool.poetry]
name = "algorithmic-trading-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyter-client = "^6.1.3"
jupyter-console = "^6.1.0"
jupyter-core = "^4.6.3"
numpy = "^1.17.4"
pandas = "^2.1.2"
requests = "^2.22.0"
scipy = "^1.5.2"
XlsxWriter = "^1.2.2"


ruff = "^0.1.3"
black = "^23.10.1"
mypy = "^1.6.1"
isort = "^5.12.0"
rope = "^1.10.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
